--- a/content/Daily/2024-10-27 (Sunday).md
+++ b/content/Daily/2024-10-27 (Sunday).md
@@ -20,8 +20,7 @@
 
 ### Today's Schedule
 
-- [ ] 🗓️ Appointments
-  -
+- [ ] ## 🗓️ Appointments
 
 ## Notes & Thoughts
 
@@ -54,7 +53,7 @@ Principles by which I live my life
 - Focus time:
 - Energy level (1-10):
 
-## 🌙 Evening Review
+## Evening Review
 
 ### Wins for the day
 
