refactor: delete outdated daily note structure and update title for clarity in 2024-10-28 entry

--- a/content/Daily/2024/10/2024-10-28.md
+++ b/content/Daily/2024/10/2024-10-28.md
@@ -1,4 +1,26 @@
 ---
 type: daily-note
-title: 2024-10-28 ()
+title: 2024-10-28 (Monday)
 ---
+
+### How am I feeling? (1-10)
+
+- Physical: 5
+- Mental: 5
+- Emotional: 6
+
+### Three things I'm grateful for
+
+1. My friends! And Edward!
+2. My health. I might be recovering from surgery but it's a reminder that overall I am in good health and I should not take that for granted.
+3. Living in a beautiful city.
+
+### Today's Primary Goals
+
+1. [ ] Most important task: Send out some new applications
+2. [ ] Second priority: Costco trip
+3. [ ] Third priority: Check in on messages from previous colleagues
+
+## Notes & Thoughts
+
+### Quick Capture
